src/objects/Lookup_PropertyState_Keyword__mdt.object
<CustomObject>
    <fields>
        <fullName>Community__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dower__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dower</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homestead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homestead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Lookup for mapping PropertyState values to their keyword.</description>
    <label>Lookup PropertyState Keyword</label>
    <pluralLabel>Lookup PropertyState Keywords</pluralLabel>
    <listViews>
        <fullName>Details</fullName>
        <columns>Keyword__c</columns>
        <columns>Community__c</columns>
        <columns>Dower__c</columns>
        <columns>Homestead__c</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
    </listViews>
</CustomObject>